// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. extracts to a div for simple views 1`] = `
<div
  className=" _baCo-19sdxe _boBoLeRa-100px _boBoRiRa-100px _boToLeRa-100px _boToRiRa-100px _boSh-e8nksv _di-flex _fl-1 _flBa-auto _flDi-column test1"
>
  <span
    className=" _di-inline"
  >
    hello world
  </span>
</div>
`;

exports[`2. extracts className for complex views but keeps other props 1`] = `
Array [
  <div
    className="css-view-1dbjc4n who _paTo-5px _paRi-5px _paLe-5px _paBo-5px _boSh-xgwarg _boToRiRa-12px _boToLeRa-12px _boBoRiRa-12px _boBoLeRa-12px r-display-6koalj r-flexBasis-1mlwlqe r-flexDirection-eqz5dr"
    style={
      Object {
        "backgroundColor": "rgba(255,255,255,1.00)",
        "boxShadow": "0px 0px 0px rgba(0,0,0,0.20)",
        "overflowX": "hidden",
        "overflowY": "hidden",
      }
    }
  />,
  <div
    className="css-view-1dbjc4n ease-in-out-top _paTo-5px _paRi-5px _paLe-5px _paBo-5px _boSh-xgwarg _boToRiRa-12px _boToLeRa-12px _boBoRiRa-12px _boBoLeRa-12px r-display-6koalj r-flexBasis-1mlwlqe r-flexDirection-eqz5dr"
    style={
      Object {
        "backgroundColor": "rgba(255,255,255,1.00)",
        "boxShadow": "0px 0px 0px rgba(0,0,0,0.20)",
        "paddingBottom": "2px",
        "paddingTop": "2px",
        "top": "-14px",
      }
    }
  >
    <span
      className=" _di-inline"
    >
      hello world
    </span>
  </div>,
]
`;

exports[`2. extracts className for complex views but keeps other props 2`] = `
Array [
  <div
    className="css-view-1dbjc4n who _paTo-5px _paRi-5px _paLe-5px _paBo-5px _boSh-xgwarg _boToRiRa-12px _boToLeRa-12px _boBoRiRa-12px _boBoLeRa-12px r-display-6koalj r-flexBasis-1mlwlqe r-flexDirection-eqz5dr"
    style={
      Object {
        "backgroundColor": "rgba(255,255,255,1.00)",
        "boxShadow": "0px 0px 0px rgba(0,0,0,0.20)",
        "overflowX": "hidden",
        "overflowY": "hidden",
      }
    }
  />,
  <div
    className="css-view-1dbjc4n ease-in-out-top _paTo-5px _paRi-5px _paLe-5px _paBo-5px _boSh-xgwarg _boToRiRa-12px _boToLeRa-12px _boBoRiRa-12px _boBoLeRa-12px r-display-6koalj r-flexBasis-1mlwlqe r-flexDirection-eqz5dr"
    style={
      Object {
        "backgroundColor": "rgba(0,0,0,1.00)",
        "boxShadow": "0px 0px 0px rgba(0,0,0,0.20)",
        "paddingBottom": "2px",
        "paddingTop": "2px",
        "top": "0px",
      }
    }
  >
    <span
      className=" _di-inline"
    >
      hello world
    </span>
  </div>,
]
`;

exports[`3. places className correctly given a single spread 1`] = `
Array [
  "css-view-1dbjc4n",
  "_ovY-hidden",
  "_ovX-hidden",
  "r-display-6koalj",
  "r-flexBasis-1mlwlqe",
  "r-flexDirection-eqz5dr",
]
`;

exports[`4. leaves dynamic variables 1`] = `
Array [
  "css-view-1dbjc4n",
  "_he-200px",
  "_ovX--hover-visible",
  "_ovY--hover-visible",
  "r-display-6koalj",
  "r-flexBasis-1mlwlqe",
  "r-flexDirection-eqz5dr",
]
`;

exports[`4. leaves dynamic variables 2`] = `
<div
  className="css-view-1dbjc4n  _he-200px _ovX--hover-visible _ovY--hover-visible r-display-6koalj r-flexBasis-1mlwlqe r-flexDirection-eqz5dr"
  style={
    Object {
      "width": "calc(100% + 20px)",
    }
  }
/>
`;

exports[`5. spread conditional 1`] = `
<div
  className="_baCo-183yn7 _ovY-hidden _ovX-hidden _flDi-column _flBa-auto _di-flex"
>
  <div
    className="_baCo-183yn7 hello-world _ovY-hidden _ovX-hidden _flDi-column _flBa-auto _di-flex"
  />
</div>
`;

exports[`6. spread ternary 1`] = `
<div
  className="_baCo-183yn7 _ovY-hidden _ovX-hidden _flDi-column _flBa-auto _di-flex"
>
  <span
    className=" _di-inline"
  >
    hello world
  </span>
</div>
`;

exports[`6. spread ternary 2`] = `
<div
  className="_baCo-19sdxe _ovY-hidden _ovX-hidden _flDi-column _flBa-auto _di-flex"
>
  <span
    className=" _di-inline"
  >
    hello world
  </span>
</div>
`;

exports[`7. ternary + data-is 1`] = `
<div
  className=" _di-flex _flBa-auto _flDi-column _maWi-30pct _miWi-500px _paBo-10px _paLe-11px _paRi-11px _wi-66pct"
>
  <div
    className="_wi-10px _he-10px _flDi-column _flBa-auto _di-flex"
  />
</div>
`;

exports[`8. styleExpansions 1`] = `
<div
  className=" _bo-0px _di-flex _flBa-auto _flDi-column _le-0px _po-relative _ri-0px _to-0px"
>
  <div
    className=" _baCo-19sdxe _di-flex _flBa-auto _flDi-column _po-absolute"
  >
    <div
      className="css-view-1dbjc4n  _baCo-1d0hial _bo-0px _le-0px _po-relative _ri-0px _to-0px r-display-6koalj r-flexBasis-1mlwlqe r-flexDirection-eqz5dr r-position-u8s1d"
    />
  </div>
</div>
`;

exports[`9. combines with classname 1`] = `
<div
  className=" _di-flex _flBa-auto _flDi-column _paBo-15px _paTo-15px home-top-dish"
/>
`;

exports[`10. extracts Text 1`] = `
<span
  className=" _di-inline _foSi-10px"
>
  <span
    className=" _di-inline _usSe-text"
  >
    <div
      className="_co-18s66rc _foWe-600 _foSi-15px css-text-901oao"
      dir="auto"
      onClick={[Function]}
    >
      hello
    </div>
  </span>
</span>
`;

exports[`11. combines everything 1`] = `
Array [
  "css-view-1dbjc4n",
  "_boToCo-dic8vh",
  "_boRiCo-1n8flkp",
  "_boLeCo-wse84g",
  "_boBoCo-1qvh775",
  "_he-0px",
  "_boToRiRa-0px",
  "_boToLeRa-0px",
  "_boBoRiRa-0px",
  "_boBoLeRa-0px",
  "_po-relative",
  "_ovY-hidden",
  "_ovX-hidden",
  "_miHe-10px",
  "_boToWi-1px",
  "_boToSt-solid",
  "_boRiWi-1px",
  "_boRiSt-solid",
  "_boLeWi-1px",
  "_boLeSt-solid",
  "_boBoWi-1px",
  "_boBoSt-solid",
  "_baCo-183yn7",
  "_alIt-center",
  "r-display-6koalj",
  "r-flexBasis-1mlwlqe",
  "r-flexDirection-eqz5dr",
]
`;

exports[`12. ternary multiple on same key 1`] = `
<div
  className="_tr- _op-1 _flDi-column _flBa-auto _di-flex"
/>
`;

exports[`14. extracts psuedo styles and evaluates constants 1`] = `
<div
  className=" _di-flex _flBa-auto _flDi-column _baCo--hover-19sdxe _baCo--active-183yn7"
/>
`;

exports[`15. extracts spacer (complex expansion) 1`] = `
Array [
  <div
    className=" _fl-zz _flSh-zz _miHe-12px _miWi-12px"
  />,
  <div
    className=" _fl-zz _flSh-zz _miHe-10px _miWi-10px"
  />,
]
`;

exports[`16. deopt when spreading multiple 1`] = `
<div
  className="css-view-1dbjc4n _fl-1 _baCo-19sdxe r-display-6koalj r-flexBasis-1mlwlqe r-flexDirection-eqz5dr"
/>
`;
